[package]
name = "ra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus = { package = "consensus", path="../"}
types = { package = "types", git="https://github.com/linghe-yang/Secure-Distributed-Computing-Protocols.git"}
config = { package = "config", git="https://github.com/linghe-yang/Secure-Distributed-Computing-Protocols.git"}
ctrbc = { package = "ctrbc", git="https://github.com/SohamJog/reliable-broadcast-protocols.git"}
crypto = { package = "crypto", git="https://github.com/linghe-yang/Secure-Distributed-Computing-Protocols.git"}

tokio = { version = "1.0", features = ["full"] }
futures = "^0.3"
bincode = "1"
bytes = "1.0"
tokio-util = "0.6"
tokio-stream = "0.1"
serde = "1.0.70"
log="*"
priority-queue="1"
fnv = "1"
async-recursion = "1.0.0"
anyhow = "1"
sha2 = "0.10.8"
reed-solomon-erasure = "4.0"

network = { package = "network", git = "https://github.com/linghe-yang/libnet-rs.git" }
async-trait = "0"
futures-util = "0"
reed_solomon_rs = "0.1.2"

[features]
bandwidth = []